# dq-test-generator

./: .gitignore  README.md  pyproject.toml
data/jaffle_shop/: build_warehouse.py
docs/: ARCHITECTURE.md  EVALS.md
docs/superpowers/plans/: 2026-05-06-dq-test-generator.md
docs/superpowers/specs/: 2026-05-06-dq-test-generator-design.md
dqgen/: cli.py  emit.py  generator.py  models.py  profile.py  validator.py
evals/: conftest.py  test_evals.py
evals/fixtures/customers/: clean.csv  dirty.csv  manifest.json
evals/fixtures/orders/: clean.csv  dirty.csv  manifest.json
evals/fixtures/payments/: clean.csv  dirty.csv  manifest.json
tests/: test_cli.py  test_emit.py  test_generator.py  test_models.py  test_profile.py  test_validator.py
