[project]
name = "dq-test-generator"
version = "0.1.0"
description = "Generate dbt tests for a warehouse table using Claude"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "duckdb>=1.1.0",
    "pydantic>=2.9.0",
    "PyYAML>=6.0.2",
    "typer>=0.13.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
dq-gen = "dqgen.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dqgen"]

[dependency-groups]
dev = [
    "dbt-duckdb>=1.10.1",
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests", "evals"]
